sped up web tests by creating a single server for the entirety of the class, not per test. 120seconds down to 10seconds. Added type checking for obj to inst. This was been a long time coming and it 'just worked' -- natural consequence of the dom/rng specifications on inst and their default values defaulting to values reasonable for non-specified signatures. Fixed a WebSocket close throw that was pointless. First push on ideInstSet which will form the development agent harness that is purely metatron-based with source code broken down to editable components, layed in uri space, and editable via ?lineq qproc, with ?subq watchdog for disk writing and recompilation.